# Win2Go

./: .gitignore  README.md  de.z_ray.Win2Go.desktop  de.z_ray.Win2Go.json  de.z_ray.Win2Go.metainfo.xml  dev.md  dev.txt  generate_pot.sh  meson.build  mount.patch  pydbus_unixfd.patch
data/: meson.build  win2go.gresource.xml
data/bcd/: BCD  boot.reg  recovery.reg
data/blp/: main_window.blp
data/po/: meson.build
win2go/: __init__.py  block_device.py  const.py  meson.build  sysutils.py  test.py  usb.py  win2go_app.py  winlib.py
win2go/ui/: block_device_item.py  main_window.blp  main_window.py  meson.build  windows_edition_item.py
win2go/utils/: block_device.py  meson.build  sysutils.py  udisks2.py  udisks2_dasbus.py
win2go/utils/bcd/: bcd.py  hivex.py  meson.build  registry_patcher.py
win2go/utils/bcdboot/: bcdboot.py  boot_reg.py  meson.build  winload.py
win2go/utils/udisks2/: block_device.py  drive.py  loop_device.py  meson.build  udisks2.py  udisks2_dasbus.py
win2go/utils/wimlib/: meson.build  wim_info.py  wimlib.py  windows_edition.py
